working on mobile styles

--- a/projects/bnb-ledger.html
+++ b/projects/bnb-ledger.html
@@ -38,7 +38,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive center" src="../images/bnbledger/logo.png">
+            <img class="img-responsive center" src="../images/bnbledger/logo.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>the project</h4>
@@ -50,7 +50,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/bnbledger/1.png">
+            <img class="img-responsive" src="../images/bnbledger/1.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>analytics product</h4>
@@ -61,7 +61,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/bnbledger/3.png">
+            <img class="img-responsive" src="../images/bnbledger/3.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>total revenue by property</h4>
@@ -72,7 +72,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/bnbledger/4.png">
+            <img class="img-responsive" src="../images/bnbledger/4.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>multiple properties</h4>
@@ -83,7 +83,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/bnbledger/5.png">
+            <img class="img-responsive" src="../images/bnbledger/5.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>dropdown</h4>
@@ -94,7 +94,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/bnbledger/6.png">
+            <img class="img-responsive" src="../images/bnbledger/6.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>single property</h4>
@@ -105,7 +105,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/bnbledger/7.png">
+            <img class="img-responsive" src="../images/bnbledger/7.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>lander</h4>
@@ -116,7 +116,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/bnbledger/8.png">
+            <img class="img-responsive" src="../images/bnbledger/8.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>video graphics</h4>
@@ -155,17 +155,17 @@
   </div>
   <div class="row project-items match-height distribute">
     <div class="project-item col-sm-3">
-      <div class="project-item-top" style="padding-top: 30px;"><img class="responsive logo" src="../images/bnbledger-logo.png"></div>
+      <div class="project-item-top" style="padding-top: 30px;"><img class="img-responsive logo" src="../images/bnbledger-logo.png"></div>
       <h5>Logo</h5>
       <p>Starts visual design and branding</p>
     </div>
     <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="../images/bnbledger/4.png"></div>
+      <div class="project-item-top"><img class="img-responsive outline" src="../images/bnbledger/4.png"></div>
       <h5>Site</h5>
       <p>Allows hosts to analyze their properties' profit and loss</p>
     </div>
     <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="../images/bnbledger/7.png"></div>
+      <div class="project-item-top"><img class="img-responsive outline" src="../images/bnbledger/7.png"></div>
       <h5>Lander</h5>
       <p>Tests user interest while site is created</p>
     </div>
@@ -182,15 +182,15 @@
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
       <p>Airbnb power hosts are often managing multiple properties at once and need a place where they can see their total revenue.</p>
-      <img class="responsive" src="../images/bnbledger/1.png">
+      <img class="img-responsive" src="../images/bnbledger/1.png">
       <p>They also need to be able to isolate each property to understand their proportion of the total value.</p>
-      <img class="responsive" src="../images/bnbledger/4.png">
+      <img class="img-responsive" src="../images/bnbledger/4.png">
       <p>Occupancy trends are also important.</p>
-      <img class="responsive" src="../images/bnbledger/2.png">
+      <img class="img-responsive" src="../images/bnbledger/2.png">
       <p>Drilling in to a property allows the host to focus and isolate problems.</p>
-      <img class="responsive"  src="../images/bnbledger/6.png">
+      <img class="img-responsive"  src="../images/bnbledger/6.png">
       <p>The landing page speaks directly to the power host.</p>
-      <img class="responsive"  src="../images/bnbledger/7.png">
+      <img class="img-responsive"  src="../images/bnbledger/7.png">
     </div>
   </div>
 </div>
