--- a/projects/coin-ledger.html
+++ b/projects/coin-ledger.html
@@ -37,7 +37,7 @@
       <div class="slideshow row">
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/1.png">
+            <img class="img-responsive" src="../images/coinledger/1.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>home</h4>
@@ -48,7 +48,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/2.png">
+            <img class="img-responsive" src="../images/coinledger/2.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>charts</h4>
@@ -59,7 +59,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/3.png">
+            <img class="img-responsive" src="../images/coinledger/3.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>bitcoin monitor</h4>
@@ -70,7 +70,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/5.png">
+            <img class="img-responsive" src="../images/coinledger/5.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>ledger</h4>
@@ -82,7 +82,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/6.png">
+            <img class="img-responsive" src="../images/coinledger/6.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>taxes</h4>
@@ -93,7 +93,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/coinledger/9.png">
+            <img class="img-responsive" src="../images/coinledger/9.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>emails</h4>
@@ -132,12 +132,12 @@
   </div>
   <div class="row project-items match-height distribute">
     <div class="project-item col-sm-6">
-      <div class="project-item-top"><img class="responsive outline" src="../images/coinledger/2.png"></div>
+      <div class="project-item-top"><img class="img-responsive outline" src="../images/coinledger/2.png"></div>
       <h5>Site</h5>
       <p>Allows investors to track their coins, follow the market and calculate their taxes.</p>
     </div>
     <div class="project-item col-sm-6">
-      <div class="project-item-top"><img class="responsive outline" src="../images/coinledger/9.png"></div>
+      <div class="project-item-top"><img class="img-responsive outline" src="../images/coinledger/9.png"></div>
       <h5>Emails</h5>
       <p>Coordinating emails introduce users to features</p>
     </div>
@@ -168,19 +168,19 @@
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
       <p>Not being a bitcoin investor myself, I needed to do some research to understand their needs. I first examined how currencies worked so I could understand bitcoin's backstory. I then interviewed an investor and learned that it was difficult to mentally process bitcoin's currency conversion as there are tiny fractions involved ($1 roughly equals 0.0043 bitcoins). It was important to separate the user's portfolio value from bitcoin's trading price. To do this I designed a strong color bar at the top of the product to make the separation clear.</p>
-      <img class="responsive" src="../images/coinledger/2.png">
+      <img class="img-responsive" src="../images/coinledger/2.png">
 
       <p>Bitcoin's price can vary dramatically minute to minute, and investors trading on this fact need to monitor price fluctuations and see trends at where they bought and sold. I designed a dropdown area where investors could access this information.</p>
-      <img class="responsive" src="../images/coinledger/3.png">
+      <img class="img-responsive" src="../images/coinledger/3.png">
 
       <p>For the ledger, I interviewed an investor to determine the actions and categories that would be important to them. I designed a color coding system to tag transactions for ease of browsing.</p>
-      <img class="responsive" src="../images/coinledger/5.png">
+      <img class="img-responsive" src="../images/coinledger/5.png">
 
       <p>Paying taxes on bitcoin investment is a major headache for investors, so making the tax page look and feel simple was very important.</p>
-      <img class="responsive" src="../images/coinledger/6.png">
+      <img class="img-responsive" src="../images/coinledger/6.png">
 
       <p>Overall, it was important to make a design that felt simple, straightforward and trustworthy for investors. I kept that in mind in the design of the home page.</p>
-      <img class="responsive" src="../images/coinledger/1.png">
+      <img class="img-responsive" src="../images/coinledger/1.png">
 
     </div>
   </div>
