--- a/projects/creativelive.html
+++ b/projects/creativelive.html
@@ -38,7 +38,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/2.png">
+            <img class="img-responsive" src="../images/creativelive/2.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>home</h4>
@@ -49,7 +49,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/3.png">
+            <img class="img-responsive" src="../images/creativelive/3.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>&lsquo;watch now&rsquo;</h4>
@@ -62,7 +62,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/8.png">
+            <img class="img-responsive" src="../images/creativelive/8.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>catalog</h4>
@@ -73,7 +73,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/7.png">
+            <img class="img-responsive" src="../images/creativelive/7.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>class page</h4>
@@ -84,7 +84,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/6.png">
+            <img class="img-responsive" src="../images/creativelive/6.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>event page</h4>
@@ -95,7 +95,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/15.png">
+            <img class="img-responsive" src="../images/creativelive/15.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>calendar list</h4>
@@ -106,7 +106,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/16.png">
+            <img class="img-responsive" src="../images/creativelive/16.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>mobile app</h4>
@@ -117,7 +117,7 @@
 
         <!--<div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/17.png">
+            <img class="img-responsive" src="../images/creativelive/17.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>navigation</h4>
@@ -128,7 +128,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/18.png">
+            <img class="img-responsive" src="../images/creativelive/18.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>my classes</h4>
@@ -139,7 +139,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/19.png">
+            <img class="img-responsive" src="../images/creativelive/19.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>class</h4>
@@ -150,7 +150,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/23.png">
+            <img class="img-responsive" src="../images/creativelive/23.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>class video player</h4>
@@ -161,7 +161,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/creativelive/24.png">
+            <img class="img-responsive" src="../images/creativelive/24.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>questions drawer</h4>
@@ -217,22 +217,22 @@
   </div>
   <div class="row project-items match-height distribute">
     <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="../images/creativelive/2.png"></div>
+      <div class="project-item-top"><img class="img-responsive outline" src="../images/creativelive/2.png"></div>
       <h5>Redesign</h5>
       <p>Simple navigation and new brand made creative people feel at home.</p>
     </div>
     <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="../images/creativelive/15.png"></div>
+      <div class="project-item-top"><img class="img-responsive outline" src="../images/creativelive/15.png"></div>
       <h5>Calendar</h5>
       <p>A list-style calendar allowed users to easily find upcoming classes of interest</p>
     </div>
     <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="../images/creativelive/16.png"></div>
+      <div class="project-item-top"><img class="img-responsive outline" src="../images/creativelive/16.png"></div>
       <h5>App</h5>
       <p>An app simplified watching classes on the go and matched website visuals</p>
     </div>
     <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="../images/creativelive/24.png"></div>
+      <div class="project-item-top"><img class="img-responsive outline" src="../images/creativelive/24.png"></div>
       <h5>Viewer</h5>
       <p>An immersive classroom gave users a place to focus and interact</p>
     </div>
@@ -263,25 +263,25 @@
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
       <p>With the redesign, I started by simplifying the navigation to allow for less user reading. I incorporated imagery of actual productions into the home page that described what Creative Live did, reinforcing the text. Because the majority of Creative Live's audience are females 25-40, I designed the pages to appeal to them, including selecting a complementary font that had a friendly handwriting feel.</p>
-      <img class="responsive" src="../images/creativelive/2.png">
+      <img class="img-responsive" src="../images/creativelive/2.png">
 
       <p>Instead of having one corporate color, I assigned colors to each vertical to allow the user to quickly remember the vertical they were most interested in. I chose colors that worked well together, were readable, and followed their general association. Together they had a &lsquo;tv bar&rsquo; effect.</p>
-      <img class="responsive" style="border:none" src="../images/creativelive/4.png">
+      <img class="img-responsive" style="border:none" src="../images/creativelive/4.png">
 
       <p>On catalog pages I created a simple filtering mechanism.</p>
-      <img class="responsive" src="../images/creativelive/8.png">
+      <img class="img-responsive" src="../images/creativelive/8.png">
 
       <p>For the calendar, we ran tests to see what users needed and found that a list layout was optimal.</p>
-      <img class="responsive" src="../images/creativelive/15.png">
+      <img class="img-responsive" src="../images/creativelive/15.png">
 
       <p>For the class pages, I kept the videos above the fold for ease of browsing.</p>
-      <img class="responsive" src="../images/creativelive/7.png">
+      <img class="img-responsive" src="../images/creativelive/7.png">
 
       <p>The classroom was designed to be an immersive experience that allowed users to easily focus and interact with the instructor.</p>
-      <img class="responsive" src="../images/creativelive/24.png">
+      <img class="img-responsive" src="../images/creativelive/24.png">
 
       <p>The mobile app coordinated with the site and was optimized for a user watching classes on the go.</p>
-      <img class="responsive phone" src="../images/creativelive/16.png">
+      <img class="img-responsive phone" src="../images/creativelive/16.png">
 
     </div>
   </div>
@@ -296,7 +296,7 @@
       </div>
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
-      <img class="responsive" src="../images/creativelive/testimonials.png"></div>
+      <img class="img-responsive" src="../images/creativelive/testimonials.png"></div>
     </div>
   </div>
 </div>
