--- a/projects/currency-cheat-sheet.html
+++ b/projects/currency-cheat-sheet.html
@@ -38,7 +38,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/currencycheatsheet/1.png">
+            <img class="img-responsive" src="../images/currencycheatsheet/1.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>cheatsheet</h4>
@@ -78,7 +78,7 @@
   </div>
   <div class="row project-items match-height distribute">
     <div class="project-item col-sm-4">
-      <div class="project-item-top"><img class="responsive outline" src="../images/currencycheatsheet/1.png"></div>
+      <div class="project-item-top"><img class="img-responsive outline" src="../images/currencycheatsheet/1.png"></div>
       <h5>Site</h5>
       <p>Compares the dollar to gold and bitcoin.</p>
       <p class="lead"><a href="http://www.currencycheatsheet.com" target="blank">Visit site</a></p>
@@ -97,7 +97,7 @@
     <div class="body-right col-sm-7 col-sm-offset-1">
       <p>This project came out of the research conducted during the design of Coin Leger. We wanted to refer to the information without needing to open a document and we wanted others to benefit from our research.</p>
       <p>The site was set up to be scanned quickly, with short succinct paragraphs describing each topic and illustrations to make the long page of text feel less overwhelming. The content was most useful as a comparision so each of the currencies were laid out alongside each other. Links to sources were embedded into the text.</p>
-      <img class="responsive" src="../images/currencycheatsheet/1.png">
+      <img class="img-responsive" src="../images/currencycheatsheet/1.png">
     </div>
   </div>
 </div>
