--- a/projects/quantcast.html
+++ b/projects/quantcast.html
@@ -38,7 +38,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/quantcast/1.png">
+            <img class="img-responsive" src="../images/quantcast/1.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>home</h4>
@@ -49,7 +49,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/quantcast/12.png">
+            <img class="img-responsive" src="../images/quantcast/12.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>measure</h4>
@@ -60,7 +60,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/quantcast/10.png">
+            <img class="img-responsive" src="../images/quantcast/10.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>compare</h4>
@@ -71,7 +71,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/quantcast/3.png">
+            <img class="img-responsive" src="../images/quantcast/3.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>analytics</h4>
@@ -125,17 +125,17 @@
   </div>
   <div class="row project-items match-height distribute">
     <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="../images/quantcast/1.png"></div>
+      <div class="project-item-top"><img class="img-responsive outline" src="../images/quantcast/1.png"></div>
       <h5>Redesign</h5>
       <p>Simple navigation and clear messaging help publishers understand the offerings.</p>
     </div>
     <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="../images/quantcast/9.png"></div>
+      <div class="project-item-top"><img class="img-responsive outline" src="../images/quantcast/9.png"></div>
       <h5>Tools</h5>
       <p>The product's design was tailored to the publisher's needs.</p>
     </div>
     <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="../images/quantcast/4.png"></div>
+      <div class="project-item-top"><img class="img-responsive outline" src="../images/quantcast/4.png"></div>
       <h5>Analytics</h5>
       <p>Data visualizations help publishers understand their user base.</p>
     </div>
@@ -169,16 +169,16 @@
 
 
       <p>I started by simplifying the navigation and created a wrapper that would ease Quantcast into the redesign. I created a home page that was direct and easy to read. After this launched we began the product redesign process.</p>
-      <img class="responsive" src="../images/quantcast/1.png">
+      <img class="img-responsive" src="../images/quantcast/1.png">
 
       <p>I redesigned the measure tool to give the publishers quick and easy access to their metrics and an ability to control the presentation of their data in their profile so they could show themselves in the best possible light.</p>
-      <img class="responsive" src="../images/quantcast/12.png">
+      <img class="img-responsive" src="../images/quantcast/12.png">
 
       <p>Because comparisons were important, I designed an area where publishers could save favorites, categorize them and create comparison charts.</p>
-      <img class="responsive" src="../images/quantcast/10.png">
+      <img class="img-responsive" src="../images/quantcast/10.png">
 
       <p>Each data visualization was customized for clarity and purpose.</p>
-      <img class="responsive" style="border:none" src="../images/quantcast/4.png">
+      <img class="img-responsive" style="border:none" src="../images/quantcast/4.png">
 
     </div>
   </div>
