--- a/projects/rare-lead.html
+++ b/projects/rare-lead.html
@@ -38,7 +38,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive center" src="../images/rarelead/logo.png">
+            <img class="img-responsive center" src="../images/rarelead/logo.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>the project</h4>
@@ -50,7 +50,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/rarelead/screens/4.png">
+            <img class="img-responsive" src="../images/rarelead/screens/4.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>app</h4>
@@ -61,7 +61,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/rarelead/screens/9.png">
+            <img class="img-responsive" src="../images/rarelead/screens/9.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>app</h4>
@@ -72,7 +72,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/rarelead/screens/3.png">
+            <img class="img-responsive" src="../images/rarelead/screens/3.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>filters</h4>
@@ -83,7 +83,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/rarelead/8-1.png">
+            <img class="img-responsive" src="../images/rarelead/8-1.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>for recruiters</h4>
@@ -94,7 +94,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/rarelead/9-1.png">
+            <img class="img-responsive" src="../images/rarelead/9-1.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>new matches</h4>
@@ -105,7 +105,7 @@
 
         <div>
           <div class="slide-right col-sm-7 col-sm-push-5">
-            <img class="responsive" src="../images/rarelead/16-1.png">
+            <img class="img-responsive" src="../images/rarelead/16-1.png">
           </div>
           <div class="slide-left col-sm-5 col-sm-pull-7">
             <h4>landing page</h4>
@@ -142,22 +142,22 @@
   </div>
   <div class="row project-items match-height distribute">
     <div class="project-item col-sm-3">
-      <div class="project-item-top" style="padding-top: 30px;"><img class="responsive logo" src="../images/rarelead-logo.png"></div>
+      <div class="project-item-top" style="padding-top: 30px;"><img class="img-responsive logo" src="../images/rarelead-logo.png"></div>
       <h5>Logo</h5>
       <p>Starts visual design and branding</p>
     </div>
     <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="../images/rarelead/screens/4.png"></div>
+      <div class="project-item-top"><img class="img-responsive outline" src="../images/rarelead/screens/4.png"></div>
       <h5>App</h5>
       <p>Allows seekers to qualify themselves and show interest</p>
     </div>
     <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="../images/rarelead/7-1.png"></div>
+      <div class="project-item-top"><img class="img-responsive outline" src="../images/rarelead/7-1.png"></div>
       <h5>Site</h5>
       <p>Allows recruiters to post jobs and contact prospects</p>
     </div>
     <div class="project-item col-sm-3">
-      <div class="project-item-top"><img class="responsive outline" src="../images/rarelead/16-1.png"></div>
+      <div class="project-item-top"><img class="img-responsive outline" src="../images/rarelead/16-1.png"></div>
       <h5>Lander</h5>
       <p>Tests user interest while site is created</p>
     </div>
@@ -174,17 +174,17 @@
     </div>
     <div class="body-right col-sm-7 col-sm-offset-1">
       <p>To soften the outreach process for both the job seeker and the recruiter, simplicity and privacy had to be designed into the product. The app would automatically qualify a candidate by parsing their Linkedin profile. A seeker could browse through jobs with direct, easy to read details and show interest by clicking the checkmark button. They would be contacted only through text and only if they showed interest first .</p>
-      <img class="responsive phone" src="../images/rarelead/screens/4.png">
+      <img class="img-responsive phone" src="../images/rarelead/screens/4.png">
 
 
       <p>The recruiter would have a streamlined process of adding jobs to the system through a website that guides them into creating an appealing posting with succinct details. </p>
-      <img class="responsive" src="../images/rarelead/8-1.png">
+      <img class="img-responsive" src="../images/rarelead/8-1.png">
 
       <p>They would no longer need to contact potential candidates out of the blue as the system would show only people with real interest.</p>
-      <img class="responsive" src="../images/rarelead/9-1.png">
+      <img class="img-responsive" src="../images/rarelead/9-1.png">
 
       <p>The landing page was designed to gauge job seeker interest while we tested out the concept.</p>
-      <img class="responsive" src="../images/rarelead/16-1.png">
+      <img class="img-responsive" src="../images/rarelead/16-1.png">
     </div>
   </div>
 </div>
