updating about page

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
   <div class="row">
 
     <div class="col-sm-7 col-sm-offset-1 left-col">
-      <img src="images/aboutcircles.png" class="img-responsive circle">
+      <img src="images/aboutcircles.png" class="img-responsive circle" alt="interaction + visual + copy">
 
       <span class="small-header">Across</span>
 
@@ -49,11 +49,11 @@
       <em class="em-header">1998</em>
 
       <span class="small-header">Helping</span>
-      <img src="images/logopile.png" class="img-responsive logopile">
+      <img src="images/logopile.png" class="img-responsive logopile" alt="CreativeLive Quantcast Yahoo! Coin Ledger Rare Lead Bnb Ledger">
     </div>
 
     <div class="col-sm-4 right-col text-center">
-      <img src="images/favicon/ms-icon-310x310.png" class="img-responsive circle">
+      <img src="images/favicon/ms-icon-310x310.png" class="img-responsive circle" alt="">
       <span class="small-header">Erin Gallup</span>
       <a class="email" href="mailto:eg@eringallup.info">eg@eringallup.info</a>
       <ul class="social list-unstyled list-inline">
