--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   </div>
   <div class="row">
     <div class="col-sm-5 col-sm-offset-1 col-xs-4 col-xs-offset-4 text-right">
-      <img src="../images/fourelements.png" class="img-responsive">
+      <img src="../images/fourelements.png" class="img-responsive" alt="">
     </div>
     <div class="col-sm-4 col-sm-offset-2 col-xs-8 col-xs-offset-2">
       <ul class="list-unstyled">
@@ -172,7 +172,7 @@
   </div>
   <div class="row">
     <div class="col-sm-12">
-      <img src="images/process.png" class="img-responsive">
+      <img src="images/process.png" class="img-responsive" alt="requirements, research, prototype, feedback, build, tweak, release, refine">
     </div>
   </div>
 </div>
