updates with erin

--- a/about.html
+++ b/about.html
@@ -3,9 +3,9 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-  <link rel="icon" href="images/favicon/favicon-96x96.png" type="image/png">
-  <link rel="apple-touch-icon-precomposed" href="images/favicon/apple-icon-180x180.png">
+  <meta name="viewport" content="initial-scale=1.0, user-scalable=yes">
+  <link rel="icon" href="images/favicon.png" type="image/png">
+  <link rel="apple-touch-icon-precomposed" href="images/favicon.png">
   <title>Erin Gallup | User Focused Product Design</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
@@ -53,12 +53,12 @@
     </div>
 
     <div class="col-sm-4 right-col text-center">
-      <img src="images/favicon/ms-icon-310x310.png" class="img-responsive circle" alt="">
+      <img src="images/headshot_large.png" class="img-responsive img-circle circle" alt="">
       <span class="small-header">Erin Gallup</span>
       <a class="email" href="mailto:eg@eringallup.info">eg@eringallup.info</a>
       <ul class="social list-unstyled list-inline">
-        <li><a class="color-twitter" href="//twitter.com/eringallup"><i class="fa fa-twitter"></i></a></li>
-        <li><a class="color-linkedin" href="//linkedin.com/eringallup"><i class="fa fa-linkedin-square"></i></a></li>
+        <li><a class="color-twitter" target="_blank" href="//twitter.com/aggregateart"><i class="fa fa-twitter"></i></a></li>
+        <li><a class="color-linkedin" target="_blank" href="//www.linkedin.com/in/egallup"><i class="fa fa-linkedin-square"></i></a></li>
       </ul>
       <hr>
       <div class="events">
@@ -67,18 +67,18 @@
           <li>
             6.6.15<br>
             Guest Lecturer<br>
-            <a href>Digital Color Theory: Color &amp; Branding</a><br>
+            <a href="https://colorwithlara.wordpress.com" target="_blank">Digital Color Theory: Color &amp; Branding</a><br>
             <span class="location">UC Berkeley Extension</span>
         </ul>
       </div>
-      <hr>
+      <!-- <hr>
       <div class="articles">
         <span class="small-header">Articles</span>
         <ul class="list-unstyled">
           <li><a href>Color Theory in America</a></li>
           <li><a href>Finding the Title for Your Situation</a></li>
         </ul>
-      </div>
+      </div> -->
     </div>
 
   </div>
