--- a/projects/currency-cheat-sheet.html
+++ b/projects/currency-cheat-sheet.html
@@ -3,9 +3,9 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-  <link rel="icon" href="../images/favicon/favicon-96x96.png" type="image/png">
-  <link rel="apple-touch-icon-precomposed" href="../images/favicon/apple-icon-180x180.png">
+  <meta name="viewport" content="initial-scale=1.0, user-scalable=yes">
+  <link rel="icon" href="../images/favicon.png" type="image/png">
+  <link rel="apple-touch-icon-precomposed" href="../images/favicon.png">
   <title>Erin Gallup | User Focused Product Design</title>
   <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
@@ -73,7 +73,7 @@
   <div class="row">
     <div class="col-sm-12">
       <h4 class="project-title">The Project</h4>
-      <p class="lead">Use the research from <a href="coinledger.html">Coin Ledger</a> to help everyone understand currency.</p>
+      <p class="lead">Use the research from <a href="coin-ledger.html">Coin Ledger</a> to help everyone understand currency.</p>
     </div>
   </div>
   <div class="row project-items match-height distribute">
