--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-  <link rel="icon" href="images/favicon/favicon-96x96.png" type="image/png">
-  <link rel="apple-touch-icon-precomposed" href="images/favicon/apple-icon-180x180.png">
+  <meta name="viewport" content="initial-scale=1.0, user-scalable=yes">
+  <link rel="icon" href="images/favicon.png" type="image/png">
+  <link rel="apple-touch-icon-precomposed" href="images/favicon.png">
   <title>Erin Gallup | User Focused Product Design</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
@@ -87,8 +87,8 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-sm-5 col-sm-offset-1 col-xs-4 col-xs-offset-4 text-right">
-      <img src="../images/fourelements.png" class="img-responsive" alt="">
+    <div class="col-sm-5 col-sm-offset-1 col-xs-8 col-xs-offset-2 text-right">
+      <img src="../images/fourelements.png" class="img-responsive fourelements" alt="">
     </div>
     <div class="col-sm-4 col-sm-offset-2 col-xs-8 col-xs-offset-2">
       <ul class="list-unstyled">
@@ -179,6 +179,6 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 <script src="http://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
-<script src="../app.js" type="text/javascript"></script>
+<script src="app.js" type="text/javascript"></script>
 </body>
 </html>
