small visual tweaks to the site, fixing typos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="initial-scale=1.0, user-scalable=yes">
   <link rel="icon" href="images/favicon.png" type="image/png">
   <link rel="apple-touch-icon-precomposed" href="images/favicon.png">
-  <title>Erin Gallup | User Focused Product Design</title>
+  <title> Erin Gallup | User Focused Product Design</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -118,10 +118,10 @@
     <div class="col-sm-12 sub-header">
       <h3>
         <strong>User</strong>
-        <span>(Not Device)</span>
+        <span>( Not Device )</span>
         <em>First</em>
       </h3>
-      <p class="col-sm-12 text-center">design for the use case rather than the case used</p>
+      <p class="col-sm-12 text-center">design for the use case rather than the case being used</p>
     </div>
   </div>
   <div class="row devices match-height">
@@ -129,15 +129,15 @@
       <div class="icon"><i class="fa fa-mobile"></i></div>
       <h4>Mobile</h4>
       <img class="img-responsive" src="images/userfirst_mobile.png">
-      <h5><span>users are on the go</span></h5>
-      <p>They are likely focusing on multiple actions at the same time (like walking,waiting or talking).</p>
+      <h5><span>Users are on the go</span></h5>
+      <p>They are likely focusing on multiple actions at the same time (like walking, waiting or talking).</p>
       <em>Design should let them do one task easily.</em>
     </div>
     <div class="col-sm-3 col-xs-6">
       <div class="icon"><i class="fa fa-tablet"></i></div>
       <h4>Tablet</h4>
       <img class="img-responsive" src="images/userfirst_tablet.png">
-      <h5><span>users are browsing</span></h5>
+      <h5><span>Users are browsing</span></h5>
       <p>They are focused and stationary. They don’t have the features of their laptops and aren’t expecting to use them.</p>
       <em>Design should let them read easily.</em>
     </div>
@@ -145,7 +145,7 @@
       <div class="icon"><i class="fa fa-laptop"></i></div>
       <h4>Laptop</h4>
       <img class="img-responsive" src="images/userfirst_laptop.png">
-      <h5><span>users are at work,<br> home, or on the go</span></h5>
+      <h5><span>Users are at work,<br> home, or on the go</span></h5>
       <p>They are in a meeting, on an airplane or on the couch. They have access to all their files but are looking at a smaller screen.</p>
       <em>Design should let them feel organized within a rectangular space.</em>
     </div>
@@ -153,7 +153,7 @@
       <div class="icon"><i class="fa fa-desktop"></i></div>
       <h4>Desktop</h4>
       <img class="img-responsive" src="images/userfirst_desktop.png">
-      <h5><span>users are at work</span></h5>
+      <h5><span>Users are at work</span></h5>
       <p>They are focused here many hours a day. They have the ability to use full features and the space to see it all.</p>
       <em>Design should let them feel focused and organized within a large space.</em>
     </div>
