--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </li>
         <li class="elements-look">
           <strong>pleasing look</strong>
-          <p>minimizes distraction and makes the user feel welcome</p>
+          <p>a clean appearance minimizes distraction and makes the user feel welcome</p>
         </li>
       </ul>
     </div>
