--- a/projects/currency-cheat-sheet.html
+++ b/projects/currency-cheat-sheet.html
@@ -137,5 +137,11 @@
 <script src="http://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
 <script src="http://cdn.jsdelivr.net/jquery.slick/1.5.0/slick.min.js" type="text/javascript"></script>
 <script src="../app.js" type="text/javascript"></script>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-2259203-1";
+urchinTracker();
+</script>
 </body>
 </html>
